# compression_hacking

./: README.md  demo.py  pyproject.toml
evaluator/: evaluator.py  representation_based_metrics.py  utils.py
evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_records/semantic_cv/: TinyLlama-1.1B-Chat-v1.0.json  opt-1.3b.json
if_bench/: __init__.py  __main__.py
if_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inf_evaluator/: __init__.py  __main__.py  evaluator.py  metrics.py
inf_evaluator/dataset/: IFEval.json
