[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluator"  # 包名，pip install 时用这个名称
version = "0.1.0"  
authors = [
    { name = "Jianxiang Zang", email = "zjxhgg@gmail.com" }, # 替换成你的信息
]

description = "Offical codes for the paper "Compression Hacking: A Supplementary Perspective on Informatics Metric of Language Models from Geometric Distortion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch",
    "torchvision",
    "datasets",
    "transformers>=4.0"]


[tool.setuptools]
include-package-data = true          

[tool.setuptools.package-data]
"evaluator" = ["dataset/*.json"]    

[project.urls] 
"Homepage" = "https://github.com/hggzjx/compression_hacking" 
"Bug Tracker" = "https://github.com/hggzjx/compression_hacking/issues"